--- a/app/src/main/res/layout/drug_notification_dialog.xml
+++ b/app/src/main/res/layout/drug_notification_dialog.xml
@@ -80,7 +80,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
                     android:backgroundTint="@color/teal_700"
-                    android:text="snooze"
+                    app:icon="@drawable/ic_baseline_schedule_24"
+                    app:iconTint="@color/white"
                     android:textColor="#F8F4F4"
                     android:textSize="12sp"
                     app:cornerRadius="8dp"
@@ -95,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
                     android:backgroundTint="@color/teal_700"
-                    android:text="take"
+                    app:icon="@drawable/ic_baseline_check_24"
                     android:textSize="12sp"
                     app:cornerRadius="8dp"
                     app:layout_constraintEnd_toStartOf="@id/dialogSnoozeButton"
@@ -110,10 +111,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:backgroundTint="@color/teal_700"
-                    android:text="Skip"
                     android:textColor="#F8F5F5"
                     android:textSize="12sp"
                     app:cornerRadius="8dp"
+                    app:icon="@drawable/ic_baseline_close_24"
+                    app:iconTint="@color/white"
                     app:layout_constraintEnd_toStartOf="@id/dialogTakeButton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dialogDrugDescrTextView"
