--- a/app/src/main/res/layout/activity_drug_reminder.xml
+++ b/app/src/main/res/layout/activity_drug_reminder.xml
@@ -122,7 +122,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ReminderstextView" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/suspendButton"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
