--- a/app/src/main/res/layout/activity_drug_reminder.xml
+++ b/app/src/main/res/layout/activity_drug_reminder.xml
@@ -191,7 +191,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/PrescriptionRefillJustTitle" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/refillButton"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
@@ -201,7 +201,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/PrescriptionRefillJustTitle" />
 
-    <com.google.android.material.button.MaterialButton
+    <Button
         android:id="@+id/addDoseButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
