--- a/app/src/main/res/layout/drug_notification_dialog.xml
+++ b/app/src/main/res/layout/drug_notification_dialog.xml
@@ -82,6 +82,7 @@
                     android:backgroundTint="@color/teal_700"
                     app:icon="@drawable/ic_baseline_schedule_24"
                     app:iconTint="@color/white"
+                    app:iconGravity="textStart"
                     android:textColor="#F8F4F4"
                     android:textSize="12sp"
                     app:cornerRadius="8dp"
@@ -97,6 +98,9 @@
                     android:layout_marginHorizontal="10dp"
                     android:backgroundTint="@color/teal_700"
                     app:icon="@drawable/ic_baseline_check_24"
+                    app:iconTint="@color/white"
+                    app:iconGravity="textStart"
+                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:textSize="12sp"
                     app:cornerRadius="8dp"
                     app:layout_constraintEnd_toStartOf="@id/dialogSnoozeButton"
@@ -116,6 +120,7 @@
                     app:cornerRadius="8dp"
                     app:icon="@drawable/ic_baseline_close_24"
                     app:iconTint="@color/white"
+                    app:iconGravity="textStart"
                     app:layout_constraintEnd_toStartOf="@id/dialogTakeButton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dialogDrugDescrTextView"
