--- a/app/src/main/res/layout/activity_drug_reminder.xml
+++ b/app/src/main/res/layout/activity_drug_reminder.xml
@@ -1,214 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/myConstraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DrugReminderScreen.View.DrugReminderActivity">
-
-    <View
-        android:id="@+id/upperView"
+    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/myConstraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:background="@color/teal_700"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        tools:context=".DrugReminderScreen.View.DrugReminderActivity">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/backButton"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="57dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="?attr/selectableItemBackground"
-        android:backgroundTint="@color/teal_700"
-        android:textColor="#F8F4F4"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:icon="@drawable/ic_baseline_arrow_back__white_24"
-        app:iconTint="@color/white"
-        app:layout_constraintStart_toStartOf="@+id/upperView"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <View
+            android:id="@+id/upperView"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:background="@color/teal_700"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/editDrugButton"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="52dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/ic_baseline_edit_24"
-        android:backgroundTint="@color/teal_700"
-        android:textColor="#F8F4F4"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:icon="@drawable/ic_baseline_edit_24"
-        app:iconTint="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/upperView"
-        app:layout_constraintTop_toTopOf="@id/upperView"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/editDrugButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="52dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/ic_baseline_edit_24"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="#F8F4F4"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:icon="@drawable/ic_baseline_edit_24"
+            app:iconTint="@color/white"
+            app:layout_constraintEnd_toEndOf="@+id/upperView"
+            app:layout_constraintTop_toTopOf="@id/upperView"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/deleteDrugButton"
-        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:background="?attr/selectableItemBackground"
-        android:backgroundTint="@color/teal_700"
-        android:textColor="#F8F4F4"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:icon="@drawable/ic_baseline_delete_24"
-        app:iconTint="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/editDrugButton"
-        app:layout_constraintTop_toTopOf="@id/upperView"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/deleteDrugButton"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:background="?attr/selectableItemBackground"
+            android:backgroundTint="@color/teal_700"
+            android:textColor="#F8F4F4"
+            android:textSize="12sp"
+            app:cornerRadius="8dp"
+            app:icon="@drawable/ic_baseline_delete_24"
+            app:iconTint="@color/white"
+            app:layout_constraintEnd_toStartOf="@+id/editDrugButton"
+            app:layout_constraintTop_toTopOf="@id/upperView"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/reminderDrugIconImageView"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="70dp"
-        android:src="@drawable/pill"
-        app:layout_constraintStart_toStartOf="@+id/upperView"
-        app:layout_constraintTop_toTopOf="@+id/upperView" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/reminderDrugIconImageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/pill"
+            app:layout_constraintStart_toStartOf="@+id/upperView"
+            app:layout_constraintTop_toTopOf="@+id/upperView" />
 
-    <TextView
-        android:id="@+id/drugNameTextV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="55dp"
-        android:text="Panadol"
-        android:textColor="#FFFFFF"
-        app:layout_constraintStart_toEndOf="@+id/reminderDrugIconImageView"
-        app:layout_constraintTop_toTopOf="@+id/upperView" />
+        <TextView
+            android:id="@+id/drugNameTextV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="55dp"
+            android:text="Panadol"
+            android:textColor="#FFFFFF"
+            app:layout_constraintStart_toEndOf="@+id/reminderDrugIconImageView"
+            app:layout_constraintTop_toTopOf="@+id/upperView" />
 
-    <TextView
-        android:id="@+id/drugStrenghtTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="1 mg"
-        android:textColor="#FDFDFD"
-        app:layout_constraintStart_toEndOf="@+id/reminderDrugIconImageView"
-        app:layout_constraintTop_toBottomOf="@+id/drugNameTextV" />
+        <TextView
+            android:id="@+id/drugStrenghtTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="1 mg"
+            android:textColor="#FDFDFD"
+            app:layout_constraintStart_toEndOf="@+id/reminderDrugIconImageView"
+            app:layout_constraintTop_toBottomOf="@+id/drugNameTextV" />
 
-    <TextView
-        android:id="@+id/ReminderstextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Reminders"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upperView" />
+        <TextView
+            android:id="@+id/ReminderstextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Reminders"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/upperView" />
 
-    <TextView
-        android:id="@+id/howOftenTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="EveryDay,take for 7 days"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ReminderstextView" />
+        <TextView
+            android:id="@+id/howOftenTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="EveryDay,take for 7 days"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ReminderstextView" />
 
-    <Button
-        android:id="@+id/suspendButton"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/teal_700"
-        android:text="Suspend"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/upperView" />
+        <Button
+            android:id="@+id/suspendButton"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="@color/teal_700"
+            android:text="Suspend"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/upperView" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/drugReminderRecycylerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="230dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.02" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/drugReminderRecycylerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="230dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.02" />
 
-    <TextView
-        android:id="@+id/conditionJustTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="Condition"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/drugReminderRecycylerView" />
+        <TextView
+            android:id="@+id/conditionJustTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:text="Condition"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/drugReminderRecycylerView" />
 
-    <TextView
-        android:id="@+id/conditionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="Headache"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/conditionJustTitle" />
+        <TextView
+            android:id="@+id/conditionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="Headache"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/conditionJustTitle" />
 
-    <TextView
-        android:id="@+id/PrescriptionRefillJustTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
-        android:text="Prescription Refill"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/conditionTextView" />
+        <TextView
+            android:id="@+id/PrescriptionRefillJustTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:text="Prescription Refill"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/conditionTextView" />
 
-    <TextView
-        android:id="@+id/drugRefillTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="No Refill Reminder"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/PrescriptionRefillJustTitle" />
+        <TextView
+            android:id="@+id/drugRefillTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="No Refill Reminder"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/PrescriptionRefillJustTitle" />
 
-    <Button
-        android:id="@+id/refillButton"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:backgroundTint="@color/teal_700"
-        android:text="Refill"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/PrescriptionRefillJustTitle" />
+        <Button
+            android:id="@+id/refillButton"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:backgroundTint="@color/teal_700"
+            android:text="Refill"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/PrescriptionRefillJustTitle" />
 
-    <Button
-        android:id="@+id/addDoseButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add Dose"
-        android:backgroundTint="@color/teal_700"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <Button
+            android:id="@+id/addDoseButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:backgroundTint="@color/teal_700"
+            android:text="@string/add_dose"
+            android:layout_margin="@dimen/_15sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/drugRefillTextView" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
