--- a/app/src/main/res/layout/activity_drug_reminder.xml
+++ b/app/src/main/res/layout/activity_drug_reminder.xml
@@ -108,17 +108,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ReminderstextView" />
 
-        <Button
-            android:id="@+id/suspendButton"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp"
-            android:backgroundTint="@color/teal_700"
-            android:text="Suspend"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/upperView" />
-
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/drugReminderRecycylerView"
@@ -178,22 +167,12 @@
             app:layout_constraintTop_toBottomOf="@+id/PrescriptionRefillJustTitle" />
 
         <Button
-            android:id="@+id/refillButton"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:backgroundTint="@color/teal_700"
-            android:text="Refill"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/PrescriptionRefillJustTitle" />
-
-        <Button
-            android:id="@+id/addDoseButton"
+            android:id="@+id/suspendButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:backgroundTint="@color/teal_700"
-            android:text="@string/add_dose"
+            android:text="@string/suspend"
             android:layout_margin="@dimen/_15sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
