--- a/app/src/main/res/layout/drug_notification_dialog.xml
+++ b/app/src/main/res/layout/drug_notification_dialog.xml
@@ -35,16 +35,17 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
+
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/dialogDrugIconimageView"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_marginTop="8dp"
+                    app:civ_border_color="#FF000000"
+                    app:civ_border_width="1dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/dialogTimeTextView"
-                    app:srcCompat="@drawable/pill" />
-
+                    app:layout_constraintTop_toBottomOf="@+id/dialogTimeTextView" />
                 <TextView
                     android:id="@+id/dialogDrugNameTextView"
                     android:layout_width="wrap_content"
@@ -73,54 +74,42 @@
                     app:layout_constraintTop_toBottomOf="@+id/dialogDrugNameTextView"
                     tools:text="Description" />
 
-                <com.google.android.material.button.MaterialButton
+                <ImageButton
                     android:id="@+id/dialogSnoozeButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="20dp"
-                    android:backgroundTint="@color/teal_700"
-                    app:icon="@drawable/ic_baseline_schedule_24"
-                    app:iconTint="@color/white"
-                    app:iconGravity="textStart"
-                    android:textColor="#F8F4F4"
-                    android:textSize="12sp"
-                    app:cornerRadius="8dp"
+                    android:layout_height="48dp"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/radio_flat_selector"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/dialogTakeButton"
                     app:layout_constraintTop_toBottomOf="@id/dialogDrugDescrTextView"
-                    app:strokeColor="@color/black" />
-
-                <com.google.android.material.button.MaterialButton
+                    app:srcCompat="@drawable/ic_baseline_schedule_24"
+                    app:strokeColor="@color/black"
+                    tools:ignore="SpeakableTextPresentCheck" />
+                <ImageButton
                     android:id="@+id/dialogTakeButton"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="10dp"
-                    android:backgroundTint="@color/teal_700"
-                    app:icon="@drawable/ic_baseline_check_24"
-                    app:iconTint="@color/white"
-                    app:iconGravity="textStart"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-                    android:textSize="12sp"
-                    app:cornerRadius="8dp"
+                    android:layout_height="48dp"
+                    android:background="@drawable/radio_flat_selector"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    app:srcCompat="@drawable/ic_baseline_check_24"
+                    tools:ignore="SpeakableTextPresentCheck"
                     app:layout_constraintEnd_toStartOf="@id/dialogSnoozeButton"
                     app:layout_constraintStart_toEndOf="@+id/dialogSkipButton"
                     app:layout_constraintTop_toBottomOf="@id/dialogDrugDescrTextView"
                     app:strokeColor="@color/black" />
 
-                <com.google.android.material.button.MaterialButton
+                <ImageButton
                     android:id="@+id/dialogSkipButton"
-                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:backgroundTint="@color/teal_700"
-                    android:textColor="#F8F5F5"
-                    android:textSize="12sp"
-                    app:cornerRadius="8dp"
-                    app:icon="@drawable/ic_baseline_close_24"
-                    app:iconTint="@color/white"
-                    app:iconGravity="textStart"
+                    android:layout_height="48dp"
+                    android:background="@drawable/radio_flat_selector"
+                   android:layout_marginLeft="@dimen/_10sdp"
+                    app:srcCompat="@drawable/ic_baseline_close_24"
+                    tools:ignore="SpeakableTextPresentCheck"
                     app:layout_constraintEnd_toStartOf="@id/dialogTakeButton"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/dialogDrugDescrTextView"
